# zkllm

./: .gitignore  README.md
app/: .env.example  inspect-store.mjs  package-lock.json  package.json
app/src/: index.ts  wake-module.ts
docs/: zero-k-agent-proposal-v2.md  zero-k-agent-proposal-v3.md  zero-k-agent-proposal.md
game-manager/: Cargo.toml
game-manager/data/widgets/: agent_bootstrap.lua
game-manager/src/: engine.rs  main.rs  mcpl_server.rs  sai_ipc.rs  write_dir.rs
game-manager/src/lobby/: connection.rs  mod.rs  protocol.rs  state.rs
game-manager/tests/: integration_test.py  local_game_test.sh  mcpl_client.py
sai-bridge/: Cargo.toml  build.rs  wrapper.h
sai-bridge/data/: AIInfo.lua  AIOptions.lua
sai-bridge/src/: callbacks.rs  commands.rs  events.rs  ipc.rs  lib.rs
