[package]
name = "game-manager"
version = "0.1.0"
edition = "2021"
description = "Zero-K GameManager MCPL server"
license = "MIT"

[dependencies]
mcpl-core = { path = "../../mcpl/mcpl-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
