[package]
name = "sai-bridge"
version = "0.1.0"
edition = "2021"
description = "Recoil/Spring SkirmishAI bridge — routes engine events to GameManager via Unix socket"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "SkirmishAI"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
bindgen = "0.71"
